util code study

--- a/navigation/CMakeLists.txt
+++ b/navigation/CMakeLists.txt
@@ -5,20 +5,43 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+set(INCLUDE_DIRECTORIES 
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+)
+
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)       
+find_package(std_msgs REQUIRED)    
+find_package(mk3_msgs REQUIRED)
 
+# Include install path
+install(
+  DIRECTORY include/
+  DESTINATION include
+)
+
+# Add your test executable
+add_executable(lpf_sample src/tool/lpf_sample.cpp src/tool/low_pass_filter.cpp)
+add_executable(quaternion_sample src/tool/quaternion_sample.cpp src/tool/quaternion_utils.cpp)
+
+
+# Set include directories
+target_include_directories(lpf_sample PUBLIC ${INCLUDE_DIRECTORIES})
+target_include_directories(quaternion_sample PUBLIC ${INCLUDE_DIRECTORIES})
+
+
+install(TARGETS
+  lpf_sample
+  quaternion_sample
+
+  DESTINATION lib/${PROJECT_NAME})
+
+# Linting and testing
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
