--- a/navigation/package.xml
+++ b/navigation/package.xml
@@ -12,6 +12,15 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <exec_depend>nav_msgs</exec_depend> 
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend> 
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>tf2</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
+  <exec_depend>mk3_msgs</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
