--- a/navigation/CMakeLists.txt
+++ b/navigation/CMakeLists.txt
@@ -17,6 +17,8 @@ find_package(std_msgs REQUIRED)
 find_package(mk3_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+
 
 # Include install path
 install(
@@ -28,7 +30,7 @@ install(
 add_executable(lpf_sample src/tool/lpf_sample.cpp src/tool/low_pass_filter.cpp)
 add_executable(quaternion_sample src/tool/quaternion_sample.cpp src/tool/quaternion_utils.cpp)
 add_executable(odom_navi_node src/odom_navi_node.cpp)
-ament_target_dependencies(odom_navi_node rclcpp nav_msgs mk3_msgs sensor_msgs)
+ament_target_dependencies(odom_navi_node rclcpp nav_msgs mk3_msgs sensor_msgs geometry_msgs)
 
 # Set include directories
 target_include_directories(odom_navi_node PUBLIC ${INCLUDE_DIRECTORIES})
@@ -39,6 +41,7 @@ target_include_directories(quaternion_sample PUBLIC ${INCLUDE_DIRECTORIES})
 install(TARGETS
   lpf_sample
   quaternion_sample
+  odom_navi_node
 
   DESTINATION lib/${PROJECT_NAME})
 
