odom_navigation 작성 완료

--- a/navigation/CMakeLists.txt
+++ b/navigation/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(nav_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 
+include_directories(include)
 
 # Include install path
 install(
@@ -26,22 +27,25 @@ install(
   DESTINATION include
 )
 
+install(
+    DIRECTORY launch
+    DESTINATION share/${PROJECT_NAME})
+
 # Add your test executable
 add_executable(lpf_sample src/tool/lpf_sample.cpp src/tool/low_pass_filter.cpp)
 add_executable(quaternion_sample src/tool/quaternion_sample.cpp src/tool/quaternion_utils.cpp)
-add_executable(odom_navi_node src/odom_navi_node.cpp)
-ament_target_dependencies(odom_navi_node rclcpp nav_msgs mk3_msgs sensor_msgs geometry_msgs)
+add_executable(odom_navigation src/use_slam/main.cpp src/use_slam/odom_navigation.cpp src/tool/quaternion_utils.cpp)
+ament_target_dependencies(odom_navigation rclcpp nav_msgs mk3_msgs sensor_msgs geometry_msgs)
 
 # Set include directories
-target_include_directories(odom_navi_node PUBLIC ${INCLUDE_DIRECTORIES})
+target_include_directories(odom_navigation PUBLIC ${INCLUDE_DIRECTORIES})
 target_include_directories(lpf_sample PUBLIC ${INCLUDE_DIRECTORIES})
 target_include_directories(quaternion_sample PUBLIC ${INCLUDE_DIRECTORIES})
-
 
 install(TARGETS
   lpf_sample
   quaternion_sample
-  odom_navi_node
+  odom_navigation
 
   DESTINATION lib/${PROJECT_NAME})
 
