gps_navigation 작성 완료

--- a/navigation/CMakeLists.txt
+++ b/navigation/CMakeLists.txt
@@ -9,6 +9,8 @@ set(INCLUDE_DIRECTORIES
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
 )
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};/usr/share/cmake/geographiclib")
+
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
@@ -18,6 +20,7 @@ find_package(mk3_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(GeographicLib REQUIRED)
 
 include_directories(include)
 
@@ -37,7 +40,11 @@ add_executable(quaternion_sample src/tool/quaternion_sample.cpp src/tool/quatern
 add_executable(odom_navigation src/use_slam/main.cpp src/use_slam/odom_navigation.cpp src/tool/quaternion_utils.cpp)
 ament_target_dependencies(odom_navigation rclcpp nav_msgs mk3_msgs sensor_msgs geometry_msgs)
 
+add_executable(gps_navigation src/use_gps/main.cpp src/use_gps/gps_navigation.cpp src/tool/quaternion_utils.cpp)
+ament_target_dependencies(gps_navigation rclcpp nav_msgs mk3_msgs sensor_msgs geometry_msgs GeographicLib)
+
 # Set include directories
+target_include_directories(gps_navigation PUBLIC ${INCLUDE_DIRECTORIES})
 target_include_directories(odom_navigation PUBLIC ${INCLUDE_DIRECTORIES})
 target_include_directories(lpf_sample PUBLIC ${INCLUDE_DIRECTORIES})
 target_include_directories(quaternion_sample PUBLIC ${INCLUDE_DIRECTORIES})
@@ -46,8 +53,13 @@ install(TARGETS
   lpf_sample
   quaternion_sample
   odom_navigation
+  gps_navigation
 
   DESTINATION lib/${PROJECT_NAME})
+
+target_link_libraries(gps_navigation
+  ${GeographicLib_LIBRARIES} 
+)
 
 # Linting and testing
 if(BUILD_TESTING)
