gps_navigation Param 처리

--- a/navigation/CMakeLists.txt
+++ b/navigation/CMakeLists.txt
@@ -31,6 +31,11 @@ install(
 )
 
 install(
+  DIRECTORY param/
+  DESTINATION share/${PROJECT_NAME}/param
+)
+
+install(
     DIRECTORY launch
     DESTINATION share/${PROJECT_NAME})
 
