--- a/navigation/param/navigation_params.yaml
+++ b/navigation/param/navigation_params.yaml
@@ -5,9 +5,18 @@ odom_navigation:
     LPFVel_x: 0.9
     LPFVel_y: 0.9
 
+    imu_topic: "/ouster/imu"
+    odom_topic: "/odom"
+    pose_topic: "/current_pose"
+    navigation_topic: "/navigation_data"
+
 gps_navigation:
   ros__parameters:
     LPFVel_x: 0.9
     LPFVel_y: 0.9
     reference_gps_latitude: -33.722768731682656
     reference_gps_longitude: 150.6739905114244
+
+    imu_topic: "/agent0/sensors/imu/imu/data"
+    gps_topic: "/agent0/sensors/gps/gps/fix"
+    navigation_topic: "/navigation_data"
