--- a/navigation/param/navigation_params.yaml
+++ b/navigation/param/navigation_params.yaml
@@ -2,8 +2,7 @@ odom_navigation:
   ros__parameters:
     type_odom: false
     enable_imu: true
-    LPFVel_x: 0.9
-    LPFVel_y: 0.9
+    velocity_alpha: 0.9
 
     imu_topic: "/ouster/imu"
     odom_topic: "/odom"
@@ -12,8 +11,7 @@ odom_navigation:
 
 gps_navigation:
   ros__parameters:
-    LPFVel_x: 0.9
-    LPFVel_y: 0.9
+    velocity_alpha: 0.9
     reference_gps_latitude: -33.722768731682656
     reference_gps_longitude: 150.6739905114244
 
