--- a/control/CMakeLists.txt
+++ b/control/CMakeLists.txt
@@ -7,18 +7,38 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)       
+find_package(std_msgs REQUIRED)    
+find_package(mk3_msgs REQUIRED)
+
+include_directories(include)
+install(
+  DIRECTORY include/
+  DESTINATION include
+)
+
+install(
+  DIRECTORY param/
+  DESTINATION share/${PROJECT_NAME}/param
+)
+
+install(
+    DIRECTORY launch
+    DESTINATION share/${PROJECT_NAME})
+
+add_executable(pid_control src/pid/main.cpp src/pid/pid_control.cpp)
+ament_target_dependencies(pid_control rclcpp mk3_msgs)
+
+target_include_directories(pid_control PUBLIC ${INCLUDE_DIRECTORIES})
+
+install(TARGETS
+  pid_control
+
+  DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
